add configs de swagger para section
